# nuxt-actix-template

./: workspace.code-workspace
api/: Cargo.toml
api/src/: error.rs  lib.rs
api/src/backend/: session.rs
api/src/controller/: mod.rs
api/src/controller/oauth2/: auth.rs  login.rs  logout.rs  mod.rs
api/src/controller/user/: me.rs  mod.rs
api/src/data/: credential.rs  http.rs  mod.rs  oauth_client.rs
web/: README.md  nuxt.config.js  package.json
web/components/: AppHeader.vue
web/components/account/: AccountMenu.vue  Avatar.vue
web/layouts/: default.vue
web/models/: user.ts
web/pages/: index.vue  login.vue  logout.vue
web/store/: auth.ts  index.ts
web/utils/: discord.ts  store-accessor.ts
